--- a/src/components/Whatsapp/Whatsapp.css
+++ b/src/components/Whatsapp/Whatsapp.css
@@ -103,8 +103,8 @@
 @media only screen and (min-width:0px) and (max-width:449px)  {
     .WppContainerTotal{
         position:absolute;
-        right: 5%;
-        bottom: -20%;
+        right: 2%;
+        top:115%;
         z-index: 999999;
     }
     
